--- a/repeat_submit/pom.xml
+++ b/repeat_submit/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.javaboy</groupId>
-    <artifactId>rate_limiter</artifactId>
+    <artifactId>repeat_submit</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>rate_limiter</name>
+    <name>repeat_submit</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
@@ -25,7 +25,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
