--- a/flowable-idm/src/main/resources/application.properties
+++ b/flowable-idm/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.username=root
 spring.datasource.password=123
 spring.datasource.url=jdbc:mysql:///flowable_idm?serverTimezone=Asia/Shanghai&useSSL=false&nullCatalogMeansCurrent=true
+
+logging.level.org.flowable=debug
