--- a/flowable-process/src/main/resources/application.properties
+++ b/flowable-process/src/main/resources/application.properties
@@ -11,3 +11,6 @@ flowable.check-process-definitions=false
 flowable.process-definition-location-prefix=classpath*:/javaboy/
 # 这个是指定流程定义 XML 文件的后缀，默认后缀有两个：**.bpmn20.xml,**.bpmn
 flowable.process-definition-location-suffixes=**.bpmn20.xml,**.bpmn
+
+# 流程变量的变化过程，会在 ACT_HI_DETAIL 表中记录下来
+flowable.history-level=full
