--- a/flowable-process/src/main/resources/application.properties
+++ b/flowable-process/src/main/resources/application.properties
@@ -6,11 +6,17 @@ logging.level.org.flowable=debug
 
 
 # 是否在项目启动的时候，自动去检查流程定义目录下是否有对应的流程定义文件，如果这个属性为 true（默认即次），就表示去检查，否则不检查（意味着不会自动部署流程）
-flowable.check-process-definitions=false
+#flowable.check-process-definitions=false
 # 设置流程定义文件的位置，默认位置就是 classpath*:/processes/
-flowable.process-definition-location-prefix=classpath*:/javaboy/
+#flowable.process-definition-location-prefix=classpath*:/javaboy/
 # 这个是指定流程定义 XML 文件的后缀，默认后缀有两个：**.bpmn20.xml,**.bpmn
-flowable.process-definition-location-suffixes=**.bpmn20.xml,**.bpmn
+#flowable.process-definition-location-suffixes=**.bpmn20.xml,**.bpmn
 
 # 流程变量的变化过程，会在 ACT_HI_DETAIL 表中记录下来
 flowable.history-level=full
+
+# 这是 JSON 外置表单的默认位置，我们可以自行修改
+flowable.form.resource-location=classpath*:/forms/
+# 这是 JSON 表单的后缀，默认是 form，当然也可以自己修改
+# .form 也是 Java 中 Swing 配置的默认后缀，所以在，IDEA 中，.form 后缀的文件，会被当成 Swing 的配置打开，此时，就需要我们自己先在一个外部编辑器里边，编辑好这个 .form 文件
+flowable.form.resource-suffixes=**.form
