--- a/tienchin/tienchin-admin/src/main/resources/ValidationMessages.properties
+++ b/tienchin/tienchin-admin/src/main/resources/ValidationMessages.properties
@@ -1,26 +1,30 @@
-channel.name.notnull=渠道名称为不能为空
-channel.type.notnull=渠道类型为不能为空
-channel.status.notnull=渠道状态为不能为空
-channel.type.invalid=渠道类型无效
-channel.status.invalid=渠道状态无效
-activity.name.notblank=活动名称不能为空
-activity.name.size=活动名称最大为20个字符
-activity.channelId.notnull=渠道ID不能为空
-activity.info.notnull=活动简介不能为空
-activity.info.size=活动简介最多255个字符
-activity.type.notnull=活动类型不能为空
-activity.discount.invalid=折扣券值无效
-activity.voucher.invalid=代金券值无效
-activity.status.invalid=活动状态无效
-activity.beginTime.notnull=活动开始时间不能为空
-activity.endTime.notnull=活动结束时间不能为空
-activity.id.notnull=活动ID不能为空
-course.type.notnull=课程类型不能为空
-course.name.notblank=课程名不能为空
-course.price.notnull=课程价格不能为空
-course.price.invalid=课程价格无效
-course.applyTo.notnull=课程适用人群不能为空
-course.info.notblank=课程简介不能为空
-course.id.notnull=课程ID不能为空
-clue.name.notblank=客户姓名不能为空
-clue.phone.notblank=客户电话不能为空
+channel.name.notnull=\u6E20\u9053\u540D\u79F0\u4E3A\u4E0D\u80FD\u4E3A\u7A7A
+channel.type.notnull=\u6E20\u9053\u7C7B\u578B\u4E3A\u4E0D\u80FD\u4E3A\u7A7A
+channel.status.notnull=\u6E20\u9053\u72B6\u6001\u4E3A\u4E0D\u80FD\u4E3A\u7A7A
+channel.type.invalid=\u6E20\u9053\u7C7B\u578B\u65E0\u6548
+channel.status.invalid=\u6E20\u9053\u72B6\u6001\u65E0\u6548
+activity.name.notblank=\u6D3B\u52A8\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A
+activity.name.size=\u6D3B\u52A8\u540D\u79F0\u6700\u5927\u4E3A20\u4E2A\u5B57\u7B26
+activity.channelId.notnull=\u6E20\u9053ID\u4E0D\u80FD\u4E3A\u7A7A
+activity.info.notnull=\u6D3B\u52A8\u7B80\u4ECB\u4E0D\u80FD\u4E3A\u7A7A
+activity.info.size=\u6D3B\u52A8\u7B80\u4ECB\u6700\u591A255\u4E2A\u5B57\u7B26
+activity.type.notnull=\u6D3B\u52A8\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
+activity.discount.invalid=\u6298\u6263\u5238\u503C\u65E0\u6548
+activity.voucher.invalid=\u4EE3\u91D1\u5238\u503C\u65E0\u6548
+activity.status.invalid=\u6D3B\u52A8\u72B6\u6001\u65E0\u6548
+activity.beginTime.notnull=\u6D3B\u52A8\u5F00\u59CB\u65F6\u95F4\u4E0D\u80FD\u4E3A\u7A7A
+activity.endTime.notnull=\u6D3B\u52A8\u7ED3\u675F\u65F6\u95F4\u4E0D\u80FD\u4E3A\u7A7A
+activity.id.notnull=\u6D3B\u52A8ID\u4E0D\u80FD\u4E3A\u7A7A
+course.type.notnull=\u8BFE\u7A0B\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
+course.name.notblank=\u8BFE\u7A0B\u540D\u4E0D\u80FD\u4E3A\u7A7A
+course.price.notnull=\u8BFE\u7A0B\u4EF7\u683C\u4E0D\u80FD\u4E3A\u7A7A
+course.price.invalid=\u8BFE\u7A0B\u4EF7\u683C\u65E0\u6548
+course.applyTo.notnull=\u8BFE\u7A0B\u9002\u7528\u4EBA\u7FA4\u4E0D\u80FD\u4E3A\u7A7A
+course.info.notblank=\u8BFE\u7A0B\u7B80\u4ECB\u4E0D\u80FD\u4E3A\u7A7A
+course.id.notnull=\u8BFE\u7A0BID\u4E0D\u80FD\u4E3A\u7A7A
+clue.name.notblank=\u5BA2\u6237\u59D3\u540D\u4E0D\u80FD\u4E3A\u7A7A
+clue.phone.notblank=\u5BA2\u6237\u7535\u8BDD\u4E0D\u80FD\u4E3A\u7A7A
+assignment.assignId.notnull=\u7EBF\u7D22ID\u4E0D\u80FD\u4E3A\u7A7A
+assignment.userId.notnull=\u7528\u6237ID\u4E0D\u80FD\u4E3A\u7A7A
+assignment.deptId.notnull=\u90E8\u95E8ID\u4E0D\u80FD\u4E3A\u7A7A
+assignment.userName.notblank=\u7528\u6237\u540D\u4E0D\u80FD\u4E3A\u7A7A
