--- a/tienchin/tienchin-admin/src/main/resources/ValidationMessages.properties
+++ b/tienchin/tienchin-admin/src/main/resources/ValidationMessages.properties
@@ -24,7 +24,10 @@ course.info.notblank=\u8BFE\u7A0B\u7B80\u4ECB\u4E0D\u80FD\u4E3A\u7A7A
 course.id.notnull=\u8BFE\u7A0BID\u4E0D\u80FD\u4E3A\u7A7A
 clue.name.notblank=\u5BA2\u6237\u59D3\u540D\u4E0D\u80FD\u4E3A\u7A7A
 clue.phone.notblank=\u5BA2\u6237\u7535\u8BDD\u4E0D\u80FD\u4E3A\u7A7A
-assignment.assignId.notnull=\u7EBF\u7D22ID\u4E0D\u80FD\u4E3A\u7A7A
+clue.clueId.notnull=\u7EBF\u7D22ID\u4E0D\u80FD\u4E3A\u7A7A
+assignment.assignId.notnull=\u7EBF\u7D22\u6216\u8005\u5546\u673AID\u4E0D\u80FD\u4E3A\u7A7A
 assignment.userId.notnull=\u7528\u6237ID\u4E0D\u80FD\u4E3A\u7A7A
 assignment.deptId.notnull=\u90E8\u95E8ID\u4E0D\u80FD\u4E3A\u7A7A
 assignment.userName.notblank=\u7528\u6237\u540D\u4E0D\u80FD\u4E3A\u7A7A
+business.name.notblank=\u5BA2\u6237\u59D3\u540D\u4E0D\u80FD\u4E3A\u7A7A
+business.phone.notblank=\u5BA2\u6237\u7535\u8BDD\u4E0D\u80FD\u4E3A\u7A7A
