--- a/tienchin/tienchin-business/pom.xml
+++ b/tienchin/tienchin-business/pom.xml
@@ -2,18 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>tienchin</artifactId>
         <groupId>org.javaboy</groupId>
+        <artifactId>tienchin</artifactId>
         <version>0.0.1</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tienchin-clue</artifactId>
+    <artifactId>tienchin-business</artifactId>
 
-    <description>
-        线索管理模块
-    </description>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
 
     <dependencies>
 
@@ -25,13 +28,10 @@
 
         <dependency>
             <groupId>org.javaboy</groupId>
-            <artifactId>tienchin-business</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.javaboy</groupId>
             <artifactId>tienchin-assignment</artifactId>
         </dependency>
 
+
     </dependencies>
+
 </project>
