--- a/tienchin/tienchin-admin/pom.xml
+++ b/tienchin/tienchin-admin/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>tienchin-clue</artifactId>
         </dependency>
 
+        <!-- 商机管理-->
+        <dependency>
+            <groupId>org.javaboy</groupId>
+            <artifactId>tienchin-business</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
