--- a/tienchin/tienchin-admin/pom.xml
+++ b/tienchin/tienchin-admin/pom.xml
@@ -92,6 +92,11 @@
             <groupId>org.javaboy</groupId>
             <artifactId>tienchin-business</artifactId>
         </dependency>
+        <!--合同管理-->
+        <dependency>
+            <groupId>org.javaboy</groupId>
+            <artifactId>tienchin-contract</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
