--- a/tienchin/tienchin-admin/src/main/resources/ValidationMessages.properties
+++ b/tienchin/tienchin-admin/src/main/resources/ValidationMessages.properties
@@ -31,3 +31,4 @@ assignment.deptId.notnull=\u90E8\u95E8ID\u4E0D\u80FD\u4E3A\u7A7A
 assignment.userName.notblank=\u7528\u6237\u540D\u4E0D\u80FD\u4E3A\u7A7A
 business.name.notblank=\u5BA2\u6237\u59D3\u540D\u4E0D\u80FD\u4E3A\u7A7A
 business.phone.notblank=\u5BA2\u6237\u7535\u8BDD\u4E0D\u80FD\u4E3A\u7A7A
+business.info.notblank=\u8DDF\u8E2A\u8BB0\u5F55\u4E0D\u80FD\u4E3A\u7A7A
