--- a/tienchin/tienchin-business/pom.xml
+++ b/tienchin/tienchin-business/pom.xml
@@ -31,7 +31,10 @@
             <artifactId>tienchin-assignment</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.javaboy</groupId>
+            <artifactId>tienchin-follow</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
