--- a/tienchin/tienchin-clue/pom.xml
+++ b/tienchin/tienchin-clue/pom.xml
@@ -32,6 +32,10 @@
             <groupId>org.javaboy</groupId>
             <artifactId>tienchin-assignment</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.javaboy</groupId>
+            <artifactId>tienchin-follow</artifactId>
+        </dependency>
 
     </dependencies>
 </project>
