--- a/tienchin/tienchin-admin/src/main/resources/application.yml
+++ b/tienchin/tienchin-admin/src/main/resources/application.yml
@@ -14,6 +14,8 @@ tienchin:
   addressEnabled: false
   # 验证码类型 math 数组计算 char 字符验证
   captchaType: math
+  contract:
+    file: /Users/sang/Documents/contract_file
 
 # 开发环境配置
 server:
@@ -51,7 +53,7 @@ spring:
   servlet:
      multipart:
        # 单个文件大小
-       max-file-size:  10MB
+       max-file-size:  5MB
        # 设置总上传的文件大小
        max-request-size:  20MB
   # 服务模块
