--- a/tienchin-ui/package.json
+++ b/tienchin-ui/package.json
@@ -29,6 +29,7 @@
     "pinia": "2.0.14",
     "vue": "3.2.31",
     "vue-cropper": "1.0.3",
+    "vue-pdf-embed": "^1.1.5",
     "vue-router": "4.0.14"
   },
   "devDependencies": {
